   now accept an optional output destination
 * changed read-textfile, write-textfile, write-textfile-lines: the optional parameter
  'translate-lineend-p' controls translating from/to OS-dependent lineend character (sequence)s
 * changed read-textfile, read-textfile-lines, write-textfile, write-textfile-lines:
   the symbol t as a filename indicates "stdin"

 * added #1= style labelled forms to the reader
 * added tailrecursion->loop transformation for compiled Murmel:
   transform the innermost tail recursion/ named let/ let* /letrec into a loop in compiled code
   avoiding the TCO trampoline
 * added limited support for non-toplevel define/ defun aka let-over-lambda in compiled Murmel:
   define/ defun may now appear in the body of (possibly nested) let/ let*/ letrec/ multiple-value-bind
   forms

 * mlib: added values as a place for setf
 * mlib: added psetf
 * mlib: added subst, subst-if, nsubst, nsubst-if
 * mlib: added endp, copy-list, copy-tree, copy-alist

 * fixed multiple-value-bind when the values form was a variable
 * fixed compiled (list* 1 2 3 (values 4 5)) and (list 1 2 3 (values 4 5))
   was: would display multiple values in the REPL
 * fixed mlib: "last" with any decimal number argument would return the whole list
 * fixed mlib: throw simple-type-error when given a wrong type


Changes in JMurmel-1.4.5 relative to JMurmel-1.4.4
released: 2023-12-31

 * changed (fixed?) the commandline parameter --eval: environment is no longer reset before REPL
   so that e.g.
     jmurmel --repl --eval (load \"mlib\")
   will work as expected
 * added the primitives lisp-implementation-type and lisp-implementation-version
 * (declaim (optimize (debug 0))) omits "loc =..." in compiled code
 * changed the reader to treat non-ascii whitespace as whitespace, too

 * mlib: added dotted-nthcdr, ldiff, tailp, butlast, nbutlast, adjoin, pushnew

 * fixed interpreted "(let () (values 1 2 3) 10)"